# phy_paper_sum

./: LICENSE  README.md  processed_papers.csv  pyproject.toml
.scripts/: Test.py  data_arxiv.py  sciBerTestTrain.py  test_openai.py
wandb/: latest-run
wandb/run-20241024_185208-pn5ozyuw/: run-pn5ozyuw.wandb
wandb/run-20241024_185208-pn5ozyuw/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json
